Fix menu on mobile

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -2,13 +2,19 @@ header {
   background-color: white;
   text-align: center;
   position: fixed;
-  top:0;
-  width: 100%;
-  z-index: 99;
+  top: 0;
+  right: 0;
+  width: 4em;
+  height: 4em;
+  z-index: 1;
 
-  .logo img {
-    width: 82px;
-    height: 80px;
+  .logo {
+    display: none;
+
+    img {
+      width: 82px;
+      height: 80px;
+    }
   }
 
   a {
@@ -19,20 +25,19 @@ header {
 
   nav {
     display: none;
+    z-index: 2;
     background-color: white;
     position: fixed;
     text-align: center;
-    width: 100%;
-    height: auto;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 50% 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 
-    text-transform: uppercase;
     ul {
       list-style-type: none;
       li {
+        text-transform: uppercase;
         margin-bottom: 1em;
         margin-left: 1em;
       }
@@ -51,7 +56,10 @@ header {
   }
 
   .nav-toggle:checked ~ nav {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 
   .nav-toggle:checked ~ .nav-toggle-label span {
@@ -70,10 +78,10 @@ header {
 
   .nav-toggle-label {
     position: absolute;
-    top: 0;
-    right: 0;
-    margin-right: 1em;
-    height: 100%;
+    z-index: 3;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
     display: flex;
     align-items: center;
     cursor: pointer;
@@ -82,12 +90,12 @@ header {
     span::before,
     span::after {
       display: block;
-      background-color: blue;
+      background-color: black;
       height: 2px;
       width: 2em;
       border-radius: 2px;
       position: relative;
-      transition: all ease-in-out 500ms;
+      transition: all ease-in-out 100ms;
     }
     span::before,
     span::after {
@@ -112,10 +120,13 @@ header {
   }
 
   @media screen and (min-width: 800px) {
+    width: 100%;
+    height: auto;
     display: grid;
     grid-template-columns: 1fr auto minmax(600px, 1fr) 1fr;
 
     .logo {
+      display: block;
       grid-column: 2 / 3;
     }
 
